<resources>
    <string name="app_name">Thirty</string>

    <string name="points_low">Low</string>
    <string name="points_four">Four (4)</string>
    <string name="points_five">Five (5)</string>
    <string name="points_six">Six (6)</string>
    <string name="points_seven">Seven (7)</string>
    <string name="points_eight">Eight (8)</string>
    <string name="points_nine">Nine (9)</string>
    <string name="points_ten">Ten (10)</string>
    <string name="points_eleven">Eleven (11)</string>
    <string name="points_twelve">Twelve (12)</string>
    <string name="dice_roll">Throw</string>

    <string name="description_dice">This represents a die</string>

    <string name="point_header">Points given for each option</string>
    <string name="default_score">0</string>
    <string name="point_total">Total points:</string>

    <string name="rules_instructions">How to play</string>
    <string name="old_rules">The game is ten rounds
        long and you have three throws each round. You may save dice that should not be rolled
        the next throw, to save a die you press it and it will be marked grey.\n
        You have ten different score options to choose from, you may
        choose one score option each round and after an option has been
        selected it can not be selected again that game. \n\n
        The scoring works as such that the dice you have selected must
        sum up to the chosen value and will grant that value as points, for example if you have
        marked the dice 5, 4, 5, 4, 3, 6, and you choose Nine(9) you will be granted 27 points. \n\n
        NOTE! When a die is saved it will also be marked for scoring,
        the game will count the dice in the order you have selected them so make sure to
        select the dice in correct order.
        </string>
    <string name="score_instructions">How the scoring works</string>
    <string name="rules">To score you have to select the dice that you want and then choose the
        appropriate score option. \n\nFor example if you have
        marked the dice 5, 4, 5, 4, 3, 6, and you choose Nine(9) you will be granted 27 points. \n\n
        NOTE!\n When a die is saved (marked grey) it will also be marked for scoring.\n
        The game will count the dice in the order you have selected them so make sure to
        select the dice in correct order.
    </string>
    <string name="start_game">Play</string>
</resources>
