<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.umu.cs.android.thirty.GameFragment"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <ImageButton
            android:id="@+id/die1_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="@drawable/white1"/>
        <ImageButton
            android:id="@+id/die2_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/white2"/>
        <ImageButton
            android:id="@+id/die3_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/white3"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <ImageButton
            android:id="@+id/die4_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/white4"/>
        <ImageButton
            android:id="@+id/die5_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/white5"/>
        <ImageButton
            android:id="@+id/die6_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white6"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/low_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_low"/>
            <Button
                android:id="@+id/four_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_four"/>
            <Button
                android:id="@+id/five_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_five"/>
            <Button
                android:id="@+id/six_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_six"/>
            <Button
                android:id="@+id/seven_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_seven"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp">
            <Button
                android:id="@+id/eight_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points_eight"/>
            <Button
                android:id="@+id/nine_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points_nine"/>
            <Button
                android:id="@+id/ten_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points_ten"/>
            <Button
                android:id="@+id/eleven_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_eleven"/>
            <Button
                android:id="@+id/twelve_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_twelve"/>

        </LinearLayout>

        <Button
            android:id="@+id/throw_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/dice_roll"/>
    </LinearLayout>


</LinearLayout>
