<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.umu.cs.android.thirty.ScoreActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point_header"
            android:textColor="?android:attr/textColorPrimary"/>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="57dp"
                android:text="@string/points_low"
                android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                android:id="@+id/low_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/default_score"
                android:textColor="?android:attr/textColorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="33dp"
                android:text="@string/points_four"
                android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                android:id="@+id/four_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_score"
                android:textColor="?android:attr/textColorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:text="@string/points_five"
                android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                android:id="@+id/five_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_score"
                android:textColor="?android:attr/textColorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="43dp"
                android:text="@string/points_six"
                android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                android:id="@+id/six_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_score"
                android:textColor="?android:attr/textColorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/points_seven"
                android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                android:id="@+id/seven_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/default_score"
                android:textColor="?android:attr/textColorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="29dp"
                android:text="@string/points_eight"
                android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                android:id="@+id/eight_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/default_score"
                android:textColor="?android:attr/textColorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="33dp"
                android:text="@string/points_nine"
                android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                android:id="@+id/nine_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/default_score"
                android:textColor="?android:attr/textColorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/points_ten"
                android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                android:id="@+id/ten_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/default_score"
                android:textColor="?android:attr/textColorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:text="@string/points_eleven"
                android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                android:id="@+id/eleven_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/default_score"
                android:textColor="?android:attr/textColorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/points_twelve"
                android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                android:id="@+id/twelve_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_score"
                android:textColor="?android:attr/textColorPrimary"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="4dp"
            android:text="@string/point_total"
            android:textColor="?android:attr/textColorPrimary"/>

        <TextView
            android:id="@+id/total_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/default_score"
            android:textColor="?android:attr/textColorPrimary"/>
    </LinearLayout>


</LinearLayout>
